fix syntax error

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -76,7 +76,7 @@
           .sales__list_top_item_contener2_rigth2
             .sales__list_top_item_contener2_rigth2_3rd
               .sales__list_top_item_contener2_rigth2_3rd_hoghog
-                =link_to "#{@product.shipping_prefecture}", "#",class:"color" do
+                =link_to "#{@product.shipping_prefecture}", "#",class:"color"
         .sales__list_top_item_contener2
           .sales__list_top_item_contener2_column2
             発送日の目安
