bread crumbs called
where = local variable

--- a/app/views/users/_bread.html.haml
+++ b/app/views/users/_bread.html.haml
@@ -1,9 +1,4 @@
 .nav
   .nav__inner
-    = link_to "#" do
-      %span.nav__inner__mel
-        メルカリ
-    %span.nav__inner__allow
-      >
-      %span.nav__inner__mypage
-        マイページ
+    - breadcrumb where
+    = breadcrumbs pretext: "",separator: " &rsaquo; ", class: ".nav__inner__mel"
