--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,14 +1,6 @@
 .wrapper
   = render partial: '/products/header'
-  .nav
-    .nav__inner
-      = link_to "#" do
-        %span.nav__inner__mel
-          メルカリ
-      %span.nav__inner__allow
-        >
-        %span.nav__inner__mypage
-          マイページ
+  = render partial: 'bread', locals: { where: :mypage }
   .main
     .main__wrapper
       .main__wrapper__left
