--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -16,7 +16,7 @@
         color: black;
         margin-right: 5px;
       }
-      &__mypage{
+      .current{
         font-weight: bold;
         margin-left: 5px;
       }
