--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -6,7 +6,7 @@
 .mein_head{
   width: 100vw;
   height: 100px;
-  background-color:#eeeeee;
+  background-color:#ffffff;
   position: relative;
   border-bottom: 1px solid #DDDDDD;
   z-index: 999;
