--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -125,7 +125,7 @@
     -if current_user?
       =link_to "商品の編集", edit_product_path, class: "red_btn"
       =link_to "出品を一旦停止する", '#', class: 'gray_btn'
-      =link_to "商品を削除する", product_path, method: 'delete', class: "red_btn"
+      =link_to "商品を削除する", product_path, method: 'delete', class: "gray_btn"
 
     
   .sales__list_2nd
