--- a/app/assets/stylesheets/buyers/new.scss
+++ b/app/assets/stylesheets/buyers/new.scss
@@ -85,7 +85,7 @@
           &_box{
             height: 20px;
             width: 20px;
-            background-color: lightgrey;
+            #box1{height: 100%; width: 100%;}
           }
           &_text{
             padding-left: 10px;
@@ -136,12 +136,14 @@
         }
         &__btn{
           height: 50px;
-          margin-top: 30px;
+          // padding-top: 0px;
           line-height: 50px;
           text-align: center;
           background-color: gray;
           font-weight: bold;
           .btn_color{color:white;}
+
+          .btn_color{background: transparent; width: 100%; height: 100%;}
         }
         &__app{
           font-size: 14px;
