--- a/app/views/buyers/new.html.haml
+++ b/app/views/buyers/new.html.haml
@@ -11,17 +11,20 @@
           = image_tag 'inu.jpg', height: '80px', width: '80px', class: 'pic'
         .l-get-content__form__box__text
           .l-get-content__form__box__text__title
-            おおおおおおおおおおおおおおおおおおおおお
+            = @product.name
           .l-get-content__form__box__text__price
-            ¥16,000 （税込）送料込み
+            = @product.price 
+            円（税込）送料込み
       .l-get-head__registration__pay
         .l-get-content__registration__pay__text
           支払い金額
         .l-get-content__registration__pay__price
-          ¥16,000
+          ¥
+          = @product.price
       .l-get-head__registration__paypay
         .l-get-content__registration__pay__point
           .l-get-content__registration__pay__point_box
+            %input#box1{:type => "checkbox"}/
           .l-get-content__registration__pay__point_text
             ポイントを使用 (所持ポイント: P0)
     .buyers
@@ -37,13 +40,21 @@
             .buyers__card__Method__text__deadline
               クレジットカード
               %br
-              ************0196
-              %br
-              有効期限 01 / 21
-              %br 
-              = image_tag 'visa.png', height: '20px', width: '50px', class: 'visa'
-
-
+              - if @default_card_information.blank?
+                %br 
+              - else
+                -#以下カード情報を表示
+                = "**** **** **** " + @default_card_information.last4
+                - exp_month = @default_card_information.exp_month.to_s
+                - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
+                %br 
+                有効期限
+                = exp_month + " / " + exp_year
+                %br 
+                = image_tag 'visa.png', height: '20px', width: '50px', class: 'visa'
+                = form_tag(action: :create, method: :post) do
+                  %button 購入する
+                
         .buyers__card__Method
           .buyers__card__Method__text
             .buyers__card__Method__text__top
@@ -53,11 +64,15 @@
                 =link_to"#" ,class:"color" do
                   変更する
             .buyers__card__Method__text__deadline
-              〒567-1234
+              〒
+              =@address.postal_code
               %br
-              長崎県長崎市湯本2355
+              =@address.city
+              =@address.street
+              =@address.building
               %br
-              大野真一郎
+                
+              =@address.user.nickname
               %br 
         .buyers__card__Method
           .buyers__card__Method__text
@@ -65,9 +80,13 @@
             .buyers__card__Method__text__deadline
               %a.red この商品はゆうゆうメルカリ便を利用しているため、アプリからのみ購入できます。
             .buyers__card__Method__text__btn
-              =link_to"#" ,class:"color"do
-                .btn_color
-                  購入する
+              - if @default_card_information.blank?
+              - else
+                = form_with(model: @buyer, method: :post,class: "btn_color") do |form|
+                  = form.hidden_field :product_id, value: @product.id
+                  = form.submit "購入する" ,class: "btn_color"
+               
+                  
             .buyers__card__Method__text__app
               アプリをお持ちでない方は以下よりインストールしてご利用いただけます。
             .buyers__card__Method__text__app-btn
