--- a/app/views/buyers/new.html.haml
+++ b/app/views/buyers/new.html.haml
@@ -82,7 +82,7 @@
             .buyers__card__Method__text__btn
               - if @default_card_information.blank?
               - else
-                = form_with(model: @buyer, method: :post,class: "btn_color") do |form|
+                = form_with(model: @buyer, method: :post,local: true,class: "btn_color") do |form|
                   = form.hidden_field :product_id, value: @product.id
                   = form.submit "購入する" ,class: "btn_color"
                
