apply price split

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -41,8 +41,7 @@
               =lady.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
             %span{href:  "#",class: "price",id:"text_price"} 
-              ¥
-              =lady.price
+              =price_split(lady.price)
 
  
 
@@ -61,8 +60,7 @@
               =men.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
             %span{href:  "#",class: "price",id:"text_price"} 
-              ¥
-              =men.price
+              =price_split(men.price)
 
 
  
@@ -82,8 +80,7 @@
               =appliance.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
             %span{href:  "#",class: "price",id:"text_price"} 
-              ¥
-              =appliance.price
+              =price_split(appliance.price)
 
 
  
@@ -103,8 +100,7 @@
               =toy.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
             %span{href:  "#",class: "price",id:"text_price"} 
-              ¥
-              =toy.price
+              =price_split(toy.price)
 
 
 
@@ -133,8 +129,7 @@
               =chanel.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
             %span{href:  "#",class: "price",id:"text_price"} 
-              ¥
-              =chanel.price
+              =price_split(chanel.price)
 
  
 
@@ -153,8 +148,7 @@
               =coach.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
             %span{href:  "#",class: "price",id:"text_price"} 
-              ¥
-              =coach.price
+              =price_split(coach.price)
 
  
 
@@ -173,8 +167,7 @@
               =louisvuitton.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
             %span{href:  "#",class: "price",id:"text_price"} 
-              ¥
-              =louisvuitton.price
+              =price_split(louisvuitton.price)
 
 
  
@@ -194,8 +187,7 @@
               =gucci.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
             %span{href:  "#",class: "price",id:"text_price"} 
-              ¥
-              =gucci.price
+              =price_split(gucci.price)
 
 
 
