--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,194 +3,16 @@
   = render partial: 'bread', locals: { where: :mypage }
   .main
     .main__wrapper
-      .main__wrapper__left
-        .main__wrapper__left__top
-          = link_to "#" do
-            .main__wrapper__left__top__list_topPage
-              .main__wrapper__left__top__list_topPage__middle
-                .main__wrapper__left__top__list_topPage__middle__text
-                  マイページ
-                .main__wrapper__left__top__list_topPage__middle__icon
-              
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  お知らせ
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  やることリスト
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  いいね！一覧
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  出品する
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  出品した商品・出品中
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  出品した商品・取引中
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  出品した商品・売却済み
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  購入した商品・取引中
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  購入した商品・過去の取引
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  購入した商品・過去の取引
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  ニュース一覧
-                .main__wrapper__left__top__list__middle__icon
-                  
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  評価一覧
-                .main__wrapper__left__top__list__middle__icon
-          
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  ガイド
-                .main__wrapper__left__top__list__middle__icon
-
-          = link_to "#" do
-            .main__wrapper__left__top__list
-              .main__wrapper__left__top__list__middle
-                .main__wrapper__left__top__list__middle__text
-                  お問い合わせ
-                .main__wrapper__left__top__list__middle__icon
-          
-
-          .main__wrapper__left__middle
-            メルペイ
-          .main__wrapper__left__middle2
-            = link_to "#" do
-              .main__wrapper__left__middle2__list
-                .main__wrapper__left__middle2__list__middle
-                  .main__wrapper__left__middle2__list__middle__text
-                    売上・振込申請
-                  .main__wrapper__left__middle2__list__middle__icon
-                    
-            = link_to "#" do
-              .main__wrapper__left__middle2__list
-                .main__wrapper__left__middle2__list__middle
-                  .main__wrapper__left__middle2__list__middle__text
-                    ポイント
-                  .main__wrapper__left__middle2__list__middle__icon
-                    
-          .main__wrapper__left__set
-            設定
-          .main__wrapper__left__bottom
-            = link_to "#" do
-              .main__wrapper__left__bottom__list
-                .main__wrapper__left__bottom__list__middle
-                  .main__wrapper__left__bottom__list__middle__text
-                    プロフィール
-                  .main__wrapper__left__bottom__list__middle__icon
-                    
-            = link_to "#" do
-              .main__wrapper__left__bottom__list
-                .main__wrapper__left__bottom__list__middle
-                  .main__wrapper__left__bottom__list__middle__text
-                    発送元・お届け先住所変更
-                  .main__wrapper__left__bottom__list__middle__icon
-                    
-            = link_to "#" do
-              .main__wrapper__left__bottom__list
-                .main__wrapper__left__bottom__list__middle
-                  .main__wrapper__left__bottom__list__middle__text
-                    支払い方法
-                  .main__wrapper__left__bottom__list__middle__icon
-                    
-            = link_to "#" do
-              .main__wrapper__left__bottom__list
-                .main__wrapper__left__bottom__list__middle
-                  .main__wrapper__left__bottom__list__middle__text
-                    メール/パスワード
-                  .main__wrapper__left__bottom__list__middle__icon
-                    
-            = link_to "#" do
-              .main__wrapper__left__bottom__list
-                .main__wrapper__left__bottom__list__middle
-                  .main__wrapper__left__bottom__list__middle__text
-                    本人情報
-                  .main__wrapper__left__bottom__list__middle__icon
-                    
-            = link_to "#" do
-              .main__wrapper__left__bottom__list
-                .main__wrapper__left__bottom__list__middle
-                  .main__wrapper__left__bottom__list__middle__text
-                    電話番号の確認
-                  .main__wrapper__left__bottom__list__middle__icon
-                    
-            = link_to "#" do
-              .main__wrapper__left__bottom__list
-                .main__wrapper__left__bottom__list__middle
-                  .main__wrapper__left__bottom__list__middle__text
-                    ログアウト
-                  .main__wrapper__left__bottom__list__middle__icon
-
-
-
+      = render partial: 'sidebar'
                     
       .main__wrapper__right
         .main__wrapper__right__top
           = link_to "#" do
             .main__wrapper__right__top__a
               .main__wrapper__right__top__a__image
-                = image_tag "https://static.mercdn.net/images/member_photo_noimage_thumb.png", size: "60x60", alt: "顔写真1", class: "image_top"
+                = image_tag "no-icon.png", size: "60x60", alt: "顔写真1", class: "image_top"
               .main__wrapper__right__top__a__name
-                キム
+                = @user.nickname
               .main__wrapper__right__top__a__info
                 .main__wrapper__right__top__a__info__wrappe
                   .main__wrapper__right__top__a__info__wrappe__evaluate
@@ -223,4 +45,6 @@
               
           .main__wrapper__right__middle_tab_1__under
             お知らせの商品はありません
+.footer
+  = render partial: '/products/adbtm'
   = render partial: '/products/footer'
