--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -30,13 +30,12 @@
   .new_title{id: "lady"}
     %h2.new_item_title レディース新着アイテム
     %li.more_item
-      =link_to "#" do
-        もっと見る >
+      =link_to "もっと見る >" , "#"
   .new_list
     %ul.new_list_item
       - @ladys.each do |lady|
         %li.item
-          =link_to "#" ,class: "new_item" do
+          =link_to product_path(lady.id) ,class: "new_item" do
             .item_text 
               =lady.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
@@ -55,7 +54,7 @@
     %ul.new_list_item
       - @mens.each do |men|
         %li.item
-          =link_to "#" ,class: "new_item" do
+          =link_to product_path(men.id) ,class: "new_item" do
             .item_text 
               =men.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
@@ -75,7 +74,7 @@
     %ul.new_list_item
       - @appliances.each do |appliance|
         %li.item
-          =link_to "#" ,class: "new_item" do
+          =link_to product_path(appliance.id) ,class: "new_item" do
             .item_text 
               =appliance.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
@@ -95,7 +94,7 @@
     %ul.new_list_item
       - @toys.each do |toy|
         %li.item
-          =link_to "#" ,class: "new_item" do
+          =link_to product_path(toy.id) ,class: "new_item" do
             .item_text 
               =toy.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
@@ -124,7 +123,7 @@
     %ul.new_list_item
       - @chanels.each do |chanel|
         %li.item
-          =link_to "#" ,class: "new_item" do
+          =link_to product_path(chanel.id) ,class: "new_item" do
             .item_text 
               =chanel.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
@@ -143,7 +142,7 @@
     %ul.new_list_item
       - @coachs.each do |coach|
         %li.item
-          =link_to "#" ,class: "new_item" do
+          =link_to product_path(coach.id) ,class: "new_item" do
             .item_text 
               =coach.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
@@ -162,7 +161,7 @@
     %ul.new_list_item
       - @louisvuittons.each do |louisvuitton|
         %li.item
-          =link_to "#" ,class: "new_item" do
+          =link_to product_path(louisvuitton.id) ,class: "new_item" do
             .item_text 
               =louisvuitton.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
@@ -182,7 +181,7 @@
     %ul.new_list_item
       - @guccis.each do |gucci|
         %li.item
-          =link_to "#" ,class: "new_item" do
+          =link_to product_path(gucci.id) ,class: "new_item" do
             .item_text 
               =gucci.name
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
