--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -1,7 +1,7 @@
 .mein
   .mein_head
     .mein_head_top
-      =link_to "#" ,class: "log" do
+      =link_to "/" ,class: "log" do
         = image_tag "fmarket_logo_red.svg",class: "mein_title", alt: "メルちゃん"          
       = form_for "#" do |f|
         .from_top
@@ -23,19 +23,25 @@
               ブランドから探す
       .mein_head_bottme_right
         %ul.right
-          %li.bottme_menu
-            = link_to "#" ,class: "color" do
-              = icon('fas', 'heart', class: 'icon')
-              いいね！一覧
-          %li.bottme_menu
-            = link_to "#" ,class: "color" do
-              = icon('fas', 'bell', class: 'icon')
-              お知らせ
-          %li.bottme_menu
-            = link_to "#" ,class: "color" do
-              = icon('fas', 'check', class: 'icon')
-              やる事リスト
-          %li.bottme.menu
-            =link_to user_path(current_user.id) ,class: "color" do
-              = image_tag "inu.jpg",class: "my_user"
-              マイページ
+          -if user_signed_in?
+            %li.bottme_menu
+              = link_to "#" ,class: "color" do
+                = icon('fas', 'heart', class: 'icon')
+                いいね！一覧
+            %li.bottme_menu
+              = link_to "#" ,class: "color" do
+                = icon('fas', 'bell', class: 'icon')
+                お知らせ
+            %li.bottme_menu
+              = link_to "#" ,class: "color" do
+                = icon('fas', 'check', class: 'icon')
+                やる事リスト
+            %li.bottme.menu
+              =link_to user_path(current_user.id) ,class: "color" do
+                = image_tag "inu.jpg",class: "my_user"
+                マイページ
+          - else
+            %li.bottme_menu
+              =link_to "新規会員登録", new_user_registration_path, class: 'new_user'
+            %li.bottme_menu
+              =link_to "ログイン", user_session_path, class: 'log_in'
