--- a/app/assets/stylesheets/products/index.scss
+++ b/app/assets/stylesheets/products/index.scss
@@ -32,10 +32,11 @@
     .Search{
       height: 40px;
       margin-top: 8px;
-      width: 55vw;
+      width: 865px;
       border: 1px solid #cccccc;
       border-radius:5px;
       color: rgb(128, 128, 128);
+      background-color: #f0f0f0;
       font-size: 1em;
       padding-left: 10px;
     }
@@ -86,7 +87,27 @@
     width: 600px;
     .right{
       display: flex;
-      justify-content:space-between;
+      justify-content:flex-end;
+      .bottme_menu{
+        height: 21px;
+        line-height: 1.5;
+        margin: 0 8px;
+      }
+      .new_user{
+        background-color: $button_red;
+        color: #ffffff;
+        padding: 8px 12px;
+        border-radius: 4px;
+        margin: 2px;
+      }
+      .log_in{
+        background-color: #ffffff;
+        color: $light_blue;
+        padding: 8px 12px;
+        border-radius: 4px;
+        border: 1px solid $light_blue;
+        margin: 2px;
+      }
     }
   }
 
@@ -237,7 +258,6 @@
 .new_list{
   width: 1020px;
   margin: 0 auto;
-
   &_item{
     display: flex; 
     flex-wrap: wrap; 
@@ -246,20 +266,20 @@
       width: calc(20% - 16px);
       height: 250px;
       margin: 8px 8px;
-      border: 1px solid rgb(230, 230, 230);
       position: relative;
       z-index: 1;
-      box-shadow: 2px 2px 4px;
+      box-shadow: 2px 2px 4px #aaaaaa;
     }
       .item_text{
         width: 100%;
         height: 30%;
         line-height: 35px;
-        text-align: center;
+        padding: 5px;
         position: absolute;
         bottom: 0;
         z-index: 2;
         overflow: hidden;
+        font-size: 14px;
       }
       .item_pic{
         width: 100%;
