--- a/app/assets/stylesheets/products/show.scss
+++ b/app/assets/stylesheets/products/show.scss
@@ -3,11 +3,11 @@
   background-color:#eeeeee;
   padding:2px 0;
   box-sizing: border-box;
-  
+  display: block;  
   &__list{
-    margin: 0 auto;
-    margin: 2% 25% 0 25%;
+    width: 700px;
     padding: 10px;
+    margin: 40px auto 0;
     border: solid 30px rgb(255, 255, 255);
     border-width: 5px 50px 20px 50px;
     background:rgb(255, 255, 255);
@@ -67,7 +67,12 @@
               width: 55%;
               margin: 0 auto;
               padding: 10px 0;
-
+              li{
+                display: flex;
+                i{
+                  line-height: 1.5;
+                }
+              }
               &_top{
                 height: 60%;
                 width: 100%;
@@ -245,11 +250,9 @@
     }
   }
   &__list_2nd{
-    margin: 0 auto;
-    margin: 2% 25% 0 25%;
-    padding: 10px;
-    border: solid 30px rgb(255, 255, 255);
-    border-width: 5px 50px 20px 50px;
+    margin: 10px auto;
+    width: 700px;
+    padding: 40px;
     background:rgb(255, 255, 255);
 
     &_denngar{
@@ -339,27 +342,34 @@
       display: flex; 
       flex-wrap: wrap;
     }
-    .color{color:black;}
+    .color{
+      color :black;
+      display: block;
+    }
       
       .list_1{
         width: 220px;
         height: 330px;
-        margin-left: 3%;
-        margin-top: 3%;
-        border: 1px solid rgb(230, 230, 230);
+        margin: 16px;
         position: relative;
         z-index: 1;
-        
+        background-color: #ffffff;
         .pic{
           width: 100%;
-          height: 70%;
+          height: 218px;
+          img{
+            width: 100%;
+          }
         }
+
         .title{
           padding: 8%;
           vertical-align: middle;
           word-wrap: break-word;
           font-size: 16px;
           height: 58px;
+          width: 100%;
+          display: block;
         }
         .title_iteme{
           display: flex;
