--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -25,10 +25,9 @@
   .main{
     background-color: #EEEEEE;
     &__wrapper{
-      margin-top: 40px;
-      margin-right: 200px;
-      margin-bottom: 0px;
-      margin-left: 200px;
+      margin: 40px auto 0;
+      padding-bottom: 40px;
+      width: 1020px;
       display: flex;
       &__left{
         width: 280px;
@@ -37,10 +36,9 @@
           height: 672px;
           &__list_topPage{
             height: 48px;
-            background-color: #DDDDDD;
+            background-color: #ffffff;
             border: 1px solid #EEEEEE;
             color: black;
-            font-weight: bold;
             position: relative;
             &__middle{
               height: 30px;
@@ -175,9 +173,7 @@
         }
       }
       &__right{
-        width: 100vw;
-        height: 100vw;
-        margin-left: 30px;
+        min-width: 700px;
         &__top{
           width: 100%;
           height: 200px;
@@ -213,7 +209,7 @@
                 width: 80%;
                 margin: 0 auto;
                 display: flex;
-                padding-left: 30px;
+                justify-content: space-between;
                 &__evaluate{
                   margin-left: 10px;
                   text-align: center;
