--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -42,6 +42,6 @@
                 マイページ
           - else
             %li.bottme_menu
-              =link_to "新規会員登録", new_user_registration_path, class: 'new_user'
+              =link_to "新規会員登録", new_user_path, class: 'new_user'
             %li.bottme_menu
               =link_to "ログイン", user_session_path, class: 'log_in'
